production/dwarf/stylesheets/application.css
/* ... */
  table.list tbody th {
    background-color: #fdfdfd;
    font-size: 12px;
    font-weight: 300;
    letter-spacing: 1px;
    text-transform: uppercase;
    border-bottom: 1px #fafafa solid; }
  table.list tbody tr td {
    font-size: 12px;
    padding: 0.6rem; }
    table.list tbody tr td.checkbox {
      font-size: 11px;
      padding: 6px 10px 6px 3px; }
  table.list tbody tr.group td {
    background-color: #f8f8f8;
    border: none;
    font-size: 0.9rem;
    line-height: 100%;
    font-weight: 300;
    padding-left: 1.2rem;
    text-transform: uppercase; }
    table.list tbody tr.group td .user {
      text-align: center; }
  table.list tbody tr.group:hover td {
    background-color: #000; }
  table.list tbody tr.group span.count {
    float: right;
    margin-right: 1.2rem; }
  table.list th {
    font-weight: 600;
    background-color: #fff;
    text-align: left; }
  table.list tr td {
    font-size: 13px;
    vertical-align: middle;
    text-align: left; }
  table.list thead th {
    border: none;
    font-size: 11px;
    font-weight: 600;
    padding: 0 3px 3px;
    text-align: left;
    text-transform: uppercase; }
    table.list thead th a {
      color: #000; }
      table.list thead th a:hover {
        color: #000; }

.issues tr th {
  text-align: left; }
.issues tr td {
  text-align: left; }
.issues tr.priority-7 > td:first-child:before {
  background-color: #900; }
.issues tr.priority-6 > td:first-child:before {
  background-color: #900; }
.issues tr.priority-5 > td:first-child:before {
  background-color: #FEFEFE; }
.issues tr.priority-3 > td:first-child:before {
  background-color: #900; }
.issues tr.priority-1 > td:first-child:before {
  background-color: #559; }
.issues tr.priority-4 > td:first-child:before {
  background-color: #900; }
.issues tr.issue > td.id {
  padding-left: 10px; }
.issues tr.issue > td.checkbox:first-child {
  background: #fff;
  border-color: transparent; }
.issues tr.issue > td:first-child:before {
  display: inline-block;
  font-family: Fontawesome;
  font-size: 8px;
  opacity: 0.5;
  font-style: normal;
  color: #fff;
  background-color: #ddd;
  margin-top: 2px;
  margin-right: 5px;
  background-color: #000;
  width: 16px;
  height: 16px;
  line-height: 16px;
  text-align: center; }
.issues tr.issue > td:first-child::before {
  content: "\f145"; }
.issues tr > th.checkbox:first-child {
  background: #fff;
  border-color: transparent; }
.issues tr.issue.closed {
  opacity: .8; }
.issues tr.issue.status-3 > td:first-child::before {
  content: "\f058";
  background-color: #77AA00; }
.issues tr.issue.msg-last td.id::before {
  font-family: Fontawesome;
  content: '\f003'; }
.issues tr.issue.priority-4 > td:first-child:before {
  content: "\f06d"; }
.issues tr.issue.priority-3 > td:first-child:before {
  content: "\f071"; }
.issues tr.issue.status-4 > td:first-child::before {
  content: "\f003"; }
.issues tr.issue.tracker-1 > td:first-child::before {
  content: "\f188"; }
.issues tr.issue.tracker-2 > td:first-child::before {
  content: "\f004"; }
.issues tr.issue.tracker-3 > td:first-child::before {
  content: "\f0a1"; }
.issues tr.issue.tracker-4 > td:first-child::before {
  content: "\f030"; }
.issues tr.issue.created-by-me > td:first-child:before {
  content: "\f0da"; }
.issues tr.issue.assigned-to-me > td:first-child:before {
  content: "\f101";
  background-color: #A3DCA3; }
.issues tr.issue.overdue > td:first-child:before {
  content: "\f017";
  background-color: #ff0000; }
.issues tr.issue.parent > td:first-child:before {
  content: "\f0fe"; }
.issues tr.issue.closed {
  color: #a0a0a0; }
  .issues tr.issue.closed > td:first-child:before {
    background-color: #a0a0a0; }
  .issues tr.issue.closed a {
    color: #a0a0a0; }
.issues tr.issue.status-4 > td:first-child:before {
  background-color: #6F608C; }
.issues tr.issue.status-3 > td:first-child:before {
  background-color: #DFDFDF; }
.issues tr.issue.priority-4.created-by-me > td:first-child:before {
  content: "\f06d";
  background-color: #ff0000; }
.issues tr.issue.priority-4.assigned-to-me > td:first-child:before {
  content: "\f06d";
  background-color: #ff0000; }
.issues tr.issue.tracker-3.status-4.priority-3.priority-high3.created-by-me > td:first-child::before {
  content: "\f0e0";
  background-color: #00FF00; }
.issues tr.issue.tracker-3.status-4.priority-3.priority-high3.assigned-to-me > td:first-child::before {
  content: "\f0e0";
  background-color: #00FF00; }
.issues tr.issue.tracker-3.status-4.priority-3.priority-high3.overdue > td:first-child::before {
  content: "\f0e0";
  background-color: #00FF00; }
.issues tr.issue.priority-3.created-by-me > td:first-child:before {
  content: "\f071";
  background-color: #FF0000; }
.issues tr.issue.priority-3.assigned-to-me > td:first-child:before {
  content: "\f071";
  background-color: #FF0000; }
.issues tbody tr:hover {
  background-color: #fafaf5 !important;
  color: #7f8c8d !important; }
  .issues tbody tr:hover a {
    color: #7f8c8d !important; }
.issues tr.issue.tracker-3.status-4.priority-3.priority-high3 > td:first-child::before {
  content: "\f0e0";
  background-color: #00FF00; }
.issues tr.issue.tracker-3.status-4 > td:first-child::before {
  content: "\f0e0"; }
.issues tr.issue.overdue.assigned-to-me > td:first-child:before {
  background-color: #FF0000; }

.odd {
  background-color: #FCFCFC; }

tr.open span.expander {
  display: none; }

/**
 * Dwarf: Login Page
 *
 * Author: Jared Denison (@jaroslavius)
 * @2014-01-01
 * @license http://creativecommons.org/licenses/by/3.0
 *
 */
.controller-account.action-login {
  padding: 0; }
  .controller-account.action-login #header, .controller-account.action-login #top-menu, .controller-account.action-login #footer {
    opacity: 0.075;
    display: none; }
  .controller-account.action-login #main {
    width: 100%;
    height: 100%;
    margin: 0;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1; }
/* ... */

